Linter,Tabbing,Shortcut registry added